Bug 1638293 - Fix missing definition of self in BaseProcessLauncher. r=jld

Differential Revision: https://phabricator.services.mozilla.com/D76004